Added basic testing and Postman collections
