# src/configs/swagger_output.json
@@ -80,154 +80,6 @@
         }
       }
     },
-    "/api/v1/site/email-already-exists/{email}": {
-      "get": {
-        "tags": [
-          "Site"
-        ],
-        "summary": "Check if email is taken",
-        "description": "Check if a user with the specified email already exists in the site",
-        "parameters": [
-          {
-            "name": "email",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string"
-            },
-            "description": "Email address to check. Cannot be empty."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/success"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/success"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/failure"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/failure"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/failure"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/failure"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/v1/site/register-user": {
-      "post": {
-        "tags": [
-          "Site"
-        ],
-        "summary": "Register a new user",
-        "description": "Register a new user with the site",
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/success"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/success"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/failure"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/failure"
-                }
-              }
-            }
-          },
-          "409": {
-            "description": "User Already Exists",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/failure"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/failure"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/failure"
-                }
-              },
-              "application/xml": {
-                "schema": {
-                  "$ref": "#/components/schemas/failure"
-                }
-              }
-            }
-          }
-        },
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/registerUser"
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/v1/site/subscribe-user": {
       "post": {
         "tags": [
@@ -384,13 +236,6 @@
         "description": "Gets all existing users searching by %keyword% format",
         "parameters": [
           {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
             "name": "keywords",
             "in": "query",
             "description": "Keyword(s) search for users to be found.",
@@ -469,15 +314,6 @@
         ],
         "summary": "Create new user",
         "description": "Creates a new user",
-        "parameters": [
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "Success",
@@ -553,13 +389,6 @@
               "type": "string"
             },
             "description": "Id of the user to be retrieved. Cannot be empty."
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -640,13 +469,6 @@
               "type": "string"
             },
             "description": "Id of the user to be updated. Cannot be empty."
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -727,13 +549,6 @@
               "type": "string"
             },
             "description": "Id of the user to be deleted. Cannot be empty."
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -808,13 +623,6 @@
         "summary": "Get a user using query",
         "description": "Gets an existing user using a MongoDb Query",
         "parameters": [
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "q",
             "description": "MongoDb query",
@@ -975,15 +783,6 @@
         ],
         "summary": "Create new product",
         "description": "Creates a new product",
-        "parameters": [
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "Success",
@@ -1139,13 +938,6 @@
               "type": "string"
             },
             "description": "Id of the product to be updated. Cannot be empty."
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -1226,13 +1018,6 @@
               "type": "string"
             },
             "description": "Id of the product to be deleted. Cannot be empty."
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -1479,13 +1264,6 @@
         "description": "Gets all existing messages searching by %keyword% format",
         "parameters": [
           {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
             "name": "keywords",
             "in": "query",
             "description": "Keyword(s) search for messages to be found.",
@@ -1564,15 +1342,6 @@
         ],
         "summary": "Create new message",
         "description": "Creates a new message",
-        "parameters": [
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "Success",
@@ -1648,13 +1417,6 @@
               "type": "string"
             },
             "description": "Id of the message to be retrieved. Cannot be empty."
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -1735,13 +1497,6 @@
               "type": "string"
             },
             "description": "Id of the message to be updated. Cannot be empty."
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -1822,13 +1577,6 @@
               "type": "string"
             },
             "description": "Id of the message to be deleted. Cannot be empty."
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -1903,13 +1651,6 @@
         "summary": "Get a message using query",
         "description": "Gets an existing message using a MongoDb Query",
         "parameters": [
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "q",
             "description": "MongoDb query",
